[gd_scene load_steps=3 format=3 uid="uid://bj5406ogsksei"]

[ext_resource type="Script" path="res://scripts/UI/main_menu.gd" id="1_tdvwp"]
[ext_resource type="Theme" uid="uid://b4j1bw66uh6dd" path="res://scenes/UI/themes_bttn/pause_menu.tres" id="2_26x5u"]

[node name="main_menu" type="CanvasLayer"]
script = ExtResource("1_tdvwp")

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -50.5
offset_right = 36.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="play_bttn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_26x5u")
text = "Jogar"

[node name="credits_bttn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_26x5u")
text = "Cr√©ditos"

[node name="quit_bttn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("2_26x5u")
text = "Sair"

[connection signal="button_up" from="menu_holder/play_bttn" to="." method="_on_play_bttn_button_up"]
[connection signal="button_up" from="menu_holder/credits_bttn" to="." method="_on_credits_bttn_button_up"]
[connection signal="button_up" from="menu_holder/quit_bttn" to="." method="_on_quit_bttn_button_up"]
